--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-	<title>Levitation Mind</title>
-</head>
-
 <body>
-	<img src="/images/blackboard.jpg">
+<h1>Hello world</h1>
+<p>This is hosted by Github pages.</p>
 </body>
 </html>
