--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello world</h1>
-<p>This is hosted by Github pages.</p>
+<img src="/images/blackboard">
+<p>The trick generate from magnetic force.</p>
 </body>
 </html>
