--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello world</h1>
-<img src="/images/blackboard">
+<img src="/images/blackboard.jpg">
 <p>The trick generate from magnetic force.</p>
 </body>
 </html>
